src/test/ui/recursion/issue-83150.stderr
error: reached the recursion limit while instantiating `func::<Map<&mut Map<&mut Map<&mu...ion/issue-83150.rs:9:24: 9:33]>>`
  --> $DIR/issue-83150.rs:9:5
   |
LL |     func(&mut iter.map(|x| x + 1))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `func` defined here
  --> $DIR/issue-83150.rs:8:1
   |
LL | fn func<T: Iterator<Item = u8>>(iter: &mut T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full type name has been written to '$TEST_BUILD_DIR/recursion/issue-83150/issue-83150.long-type.txt'

error: aborting due to previous error

